client/src/Styles/App.scss
// Layouts
$short-window: 'only screen and (max-height: 484px)';
$extra-device: 'only screen and (min-width: 1600px) and (max-width: 2560px)';
$laptop-device: 'only screen and (min-width: 1200px) and (max-width: 1599px)';
$lg-layout: 'only screen and (min-width: 992px) and (max-width: 1199px)';
$md-layout:'only screen and (min-width: 768px) and (max-width: 991px)';
$sm-layout:'only screen and (max-width: 767px)';
$large-mobile: 'only screen and (max-width: 575px)';
$small-mobile: 'only screen and (max-width: 479px)';
// 
// Style
.hero {
    position: absolute;
    top: 55%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: #15172b;
    border-radius: 5px;
    box-sizing: border-box;
    height: max-content;
    padding: 20px;
}

.vid-container {
    min-height: fit-content;
}

.jumbotron {
    height: 100vh;
    padding-top: 40px;
}

.header {
    color: white;
}

.instructions {
    color: white;
}

video {
    position: absolute;
    right: 0;
    bottom: 0;
    min-width: 100%;
    min-height: 100%;
}

.input-container {
    height: 50px;
    position: relative;
    width: 100%;
}

.ic1 {
    margin-top: 40px;
}

.input {
    background-color: #303245;
    border-radius: 12px;
    border: 0;
    box-sizing: border-box;
    color: #eee;
    font-size: 18px;
    height: 100%;
    outline: 0;
    padding: 4px 20px 0;
    width: 100%;
}

.cut {
    background-color: #15172b;
    border-radius: 10px;
    height: 20px;
    left: 20px;
    position: absolute;
    top: -20px;
    transform: translateY(0);
    transition: transform 200ms;
    width: 76px;
}

.cut-short {
    width: 50px;
}

.input:focus~.cut,
.input:not(:placeholder-shown)~.cut {
    transform: translateY(8px);
}

.placeholder {
    color: #65657b;
    font-family: sans-serif;
    left: 20px;
    line-height: 14px;
    pointer-events: none;
    position: absolute;
    transform-origin: 0 50%;
    transition: transform 200ms, color 200ms;
    top: 20px;
}

label.placeholder {
    background-color: #303245;
}

.input:focus~.placeholder,
.input:not(:placeholder-shown)~.placeholder {
    transform: translateY(-30px) translateX(10px) scale(0.75);
}

.input:not(:placeholder-shown)~.placeholder {
    color: #808097;
}

.input:focus~.placeholder {
    color: #dc2f55;
    background-color: #15172b;
}

.submit {
    background-color: #08d;
    border-radius: 12px;
    border: 0;
    box-sizing: border-box;
    color: #eee;
    cursor: pointer;
    font-size: 18px;
    height: 50px;
    margin-top: 38px;
    outline: 0;
    text-align: center;
    width: 100%;
}

.submit:active {
    background-color: #06b;
}

.card {
    margin-bottom: 5%;
    height: 90%;
    padding: 5%;
}

.footer {
    background-color: #20252A;
    padding-top: 35px;
    color: white;
    a {
        text-decoration: none;
        color: grey;
    }
    a:hover {
        color: red;
    }
}

.App-logo {
    height: 4.5vmin;
    pointer-events: none;
}

@media (prefers-reduced-motion: no-preference) {
    .App-logo {
        animation: App-logo-spin infinite 20s linear;
    }
}

.error {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    border: 1px solid lightgray;
    height: 85vh;
    width: 85vh;
    display: grid;
    place-items: center;
}

#error-vector {
    height: 30vh;
    width: 30vh;
    margin-bottom: 5vh;
}

a {
    color: #F66947;
    text-decoration: none;
}

//Loader
.preloader {
    position: absolute;
    margin-left: -55px;
    margin-top: -100px;
    height: 110px;
    width: 110px;
    left: 50%;
    top: 50%;
}

.loader {
    width: 110px;
    height: 110px;
}

.path {
    stroke: #9ea1a4;
    stroke-width: 0.25;
    fill: #241E20;
}

#cloud {
    position: relative;
    z-index: 2;
}

#cloud path {
    fill: #efefef;
}

#sun {
    margin-left: -10px;
    margin-top: 6px;
    opacity: 0;
    width: 60px;
    height: 60px;
    position: absolute;
    left: 45px;
    top: 15px;
    z-index: 1;
    animation-name: rotate;
    animation-duration: 16000ms;
    animation-iteration-count: infinite;
    animation-timing-function: linear;
}

#sun path {
    stroke-width: 0.18;
    fill: #9ea1a4;
}

@keyframes rotate {
    0% {
        transform: rotateZ(0deg);
    }
    100% {
        transform: rotateZ(360deg);
    }
}


/* Rain */

.rain {
    position: absolute;
    width: 70px;
    height: 70px;
    margin-top: -32px;
    margin-left: 19px;
}

.drop {
    opacity: 1;
    background: #9ea1a4;
    display: block;
    float: left;
    width: 3px;
    height: 10px;
    margin-left: 4px;
    border-radius: 0px 0px 6px 6px;
    animation-name: drop;
    animation-duration: 350ms;
    animation-iteration-count: infinite;
}

.drop:nth-child(1) {
    animation-delay: -130ms;
}

.drop:nth-child(2) {
    animation-delay: -240ms;
}

.drop:nth-child(3) {
    animation-delay: -390ms;
}

.drop:nth-child(4) {
    animation-delay: -525ms;
}

.drop:nth-child(5) {
    animation-delay: -640ms;
}

.drop:nth-child(6) {
    animation-delay: -790ms;
}

.drop:nth-child(7) {
    animation-delay: -900ms;
}

.drop:nth-child(8) {
    animation-delay: -1050ms;
}

.drop:nth-child(9) {
    animation-delay: -1130ms;
}

.drop:nth-child(10) {
    animation-delay: -1300ms;
}

@keyframes drop {
    50% {
        height: 45px;
        opacity: 0;
    }
    51% {
        opacity: 0;
    }
    100% {
        height: 1px;
        opacity: 0;
    }
}

.text {
    font-family: Helvetica, 'Helvetica Neue', sans-serif;
    letter-spacing: 1px;
    text-align: center;
    margin-left: -43px;
    font-weight: bold;
    margin-top: 20px;
    font-size: 11px;
    color: #a0a0a0;
    width: 200px;
}

@keyframes App-logo-spin {
    from {
        transform: rotate(0deg);
    }
    to {
        transform: rotate(360deg);
    }
}

@media #{$large-mobile} {
    .hero {
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        background-color: #15172b;
        border-radius: 0px;
        height: 100%;
        padding: 20px;
        padding-top: 50%;
    }
    video {
        display: none;
    }
}

@media #{$extra-device} {
    .hero {
        top: 50%;
    }
}

@media #{$short-window} {
    .hero {
        top: 65%;
    }
}

